[package]
name = "home"
version = "0.1.1"
authors = ["Alsan Ali <morrutplz@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
byteorder = "1.4"
env_logger = "0.8"
hound = "3.4"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
samplerate = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.6"
serenity = { version = "0.10", features = ["voice"] }
songbird = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.5"