[package]
name = "home"
version = "0.1.1"
authors = ["Alsan Ali <morrutplz@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
env_logger = "0.8"
feather-protocol = { git = "https://github.com/feather-rs/feather", rev = "415c292ac831951eafbd43ba127d8ac4ec13bda3" }
futures = "0.3"
log = "0.4"
mongodb = "2.0.0-alpha"
num-bigint = "0.4"
rand = "0.7"
rand_core = "0.5"
reqwest = { version = "0.11", features = ["json"] }
rsa = "0.3"
rsa-der = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.6"
sha-1 = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.5"
uuid = "0.8"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "current"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "unstable_discord_api"
]